Add test running to ansible

--- a/deploy/ansible/roles/labrepo/tasks/main.yml
+++ b/deploy/ansible/roles/labrepo/tasks/main.yml
@@ -69,6 +69,10 @@
   environment:
         DJANGO_SETTINGS_MODULE: "settings.production"
 
+- name: Run tests
+  django_manage: command="test --noinput --failfast" app_path={{ project_dir }} virtualenv={{ project_dir }}/env/
+  environment:
+        DJANGO_SETTINGS_MODULE: "settings.testing"
 - name: Check supervisor service
   service: name=supervisor state=started enabled=yes
   sudo: yes
