--- a/deploy/ansible/group_vars/production.example
+++ b/deploy/ansible/group_vars/production.example
@@ -2,25 +2,24 @@
 # Expected value without www
 server_hostname: labrepo.org
 
-user: vagrant
-project_dir: /home/vagrant/labrepo
+user: ubuntu
+project_dir: /home/ubuntu/labrepo
 
 # paste here values from secret.example
 
-admin_email: cyc60@mail.ru
-secret_key: 12321
-language_code: en-us
-mongodb_user: admin
-mongodb_passwd: E9WAtmSVKb
-mongodb_name: labrepo
+admin_email: <e-mail for sending debug information>
+secret_key: <50 random characters unique key>
+mongodb_user: <admin user for mongodb>
+mongodb_passwd: <password for admin user>
+mongodb_name: <mongo database name>
 mongodb_host: 127.0.0.1
 mongodb_port: 27017
-email_host: smtp.gmail.com
-email_port: 587
-email_host_user: no-reply@labrepo.com
-email_host_password: u0S7QP0dMI
-email_use_tls: True
-server_email: no-reply@labrepo.com
+email_host: <SMTP server address>
+email_port: <SMTP server port>
+email_host_user: <SMTP server user>
+email_host_password: <SMTP server password>
+email_use_tls: <use or not encrypted connection, values: True or False only>
+server_email: <email address for outgoing e-mails>
 social_auth_facebook_key: <social_auth_facebook_key>
 social_auth_facebook_secret: <social_auth_facebook_secret>
 social_auth_google_oauth2_key: <social_auth_google_oauth2_key>
