--- a/deploy/ansible/hosts.example
+++ b/deploy/ansible/hosts.example
@@ -2,7 +2,7 @@
 1.2.3.10 ansible_ssh_user=vagrant ansible_ssh_pass=vagrant
 
 [staging]
-52.21.33.73 ansible_ssh_user=ubuntu ansible_ssh_private_key_file="~/.ssh/aws-labrepo.pem"
+1.2.3.10 ansible_ssh_user=ubuntu ansible_ssh_private_key_file="~/.ssh/sshkey.pem"
 
 [production]
-52.21.80.242 ansible_ssh_user=ubuntu ansible_ssh_private_key_file="~/.ssh/aws-labrepo.pem"
+1.2.3.11 ansible_ssh_user=ubuntu ansible_ssh_private_key_file="~/.ssh/sshkey.pem"
