--- a/deploy/ansible/roles/labrepo/handlers/main.yml
+++ b/deploy/ansible/roles/labrepo/handlers/main.yml
@@ -14,4 +14,6 @@
     - "name=django_{{ project_name }} state=restarted config=/etc/supervisor/supervisord.conf"
     - "name=celery_{{ project_name }} state=present config=/etc/supervisor/supervisord.conf"
     - "name=celery_{{ project_name }} state=restarted config=/etc/supervisor/supervisord.conf"
+    - "name=chat_{{ project_name }} state=present config=/etc/supervisor/supervisord.conf"
+    - "name=chat_{{ project_name }} state=restarted config=/etc/supervisor/supervisord.conf"
   sudo: yes
