--- a/deploy/ansible/roles/labrepo/templates/nginx.conf
+++ b/deploy/ansible/roles/labrepo/templates/nginx.conf
@@ -2,6 +2,10 @@ upstream labrepo {
     server 127.0.0.1:8001;
 }
 
+upstream chat {
+    server 127.0.0.1:8080;
+}
+
 server {
     server_name www.{{ server_hostname }};
     return 302 http://{{ server_hostname }}$request_uri;
@@ -39,5 +43,15 @@ server {
         proxy_set_header   Host             $host;
         proxy_set_header   X-Real-IP        $remote_addr;
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    }
+
+    location /chat/ {
+        proxy_pass         http://chat;
+        proxy_redirect     off;
+        proxy_set_header   Host             $host;
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
