--- a/deploy/ansible/roles/labrepo/templates/django_settings.conf
+++ b/deploy/ansible/roles/labrepo/templates/django_settings.conf
@@ -5,6 +5,7 @@ LANGUAGE_CODE="{{ language_code }}"
 MONGODB_USER="{{ mongodb_user }}"
 MONGODB_PASSWD="{{ mongodb_passwd }}"
 MONGODB_NAME="{{ mongodb_name }}"
+MONGODB_TEST_DATABASE="{{ mongodb_test_database }}"
 MONGODB_HOST="{{ mongodb_host }}"
 MONGODB_PORT="{{ mongodb_port }}"
 EMAIL_HOST="{{ email_host }}"
