Update ansible. Restrict apt packages versions. Add redis conf and handler

--- a/deploy/ansible/roles/common/tasks/main.yml
+++ b/deploy/ansible/roles/common/tasks/main.yml
@@ -17,7 +17,7 @@
   sudo: yes
 
 - name: Install supervisor=3.0
-  apt: name=supervisor state=present
+  apt: name=supervisor=3.0b2-1 state=present
   sudo: yes
 
 
