--- a/static_dist/package.json
+++ b/static_dist/package.json
@@ -5,6 +5,7 @@
     "bower-installer": "~1.2.0",
     "main-bower-files": "~2.9.0",
     "gulp-concat": "~2.6.0",
+    "gulp-print": "~2.0.1",
     "gulp-filter": "~3.0.1",
     "run-sequence": "~1.1.4",
     "gulp-css-url-adjuster": "~0.2.3"
