--- a/static_dist/package.json
+++ b/static_dist/package.json
@@ -8,6 +8,8 @@
     "gulp-print": "~2.0.1",
     "gulp-filter": "~3.0.1",
     "run-sequence": "~1.1.4",
-    "gulp-css-url-adjuster": "~0.2.3"
+    "gulp-css-url-adjuster": "~0.2.3",
+    "gulp-uglify": "~1.4.2",
+    "gulp-minify-css": "~1.2.1"
   }
 }
