Update nginx conf. Add gzip and expires  headers for static

--- a/deploy/ansible/roles/labrepo/templates/nginx.conf
+++ b/deploy/ansible/roles/labrepo/templates/nginx.conf
@@ -27,6 +27,9 @@ server {
 
     location /static/ {
          alias $static_root/static/;
+         expires 30d;
+         add_header Pragma public;
+         add_header Cache-Control "public";
     }
 
     location /media/ {
