--- a/static_dist/package.json
+++ b/static_dist/package.json
@@ -10,6 +10,7 @@
     "run-sequence": "~1.1.4",
     "gulp-css-url-adjuster": "~0.2.3",
     "gulp-uglify": "~1.4.2",
-    "gulp-minify-css": "~1.2.1"
+    "gulp-minify-css": "~1.2.1",
+    "gulp-add-src": "~0.2.0"
   }
 }
