--- a/deploy/ansible/secret.example
+++ b/deploy/ansible/secret.example
@@ -1,4 +1,5 @@
 ---
+django_settings_file: production
 admin_email: <e-mail for sending debug information>
 secret_key: <50 random characters unique key>
 mongodb_user: <admin user for mongodb>
