--- a/deploy/ansible/roles/labrepo/templates/supervisor_celery.conf
+++ b/deploy/ansible/roles/labrepo/templates/supervisor_celery.conf
@@ -1,8 +1,8 @@
 [program:celery_labrepo]
 autorestart=true
-command={{ project_dir }}/env/bin/python manage.py celeryd --settings=settings.production
+command={{ project_dir }}/env/bin/python manage.py celeryd
 directory={{ project_dir }}
-environment=LANG="ru_RU.utf8", LC_ALL="ru_RU.UTF-8", LC_LANG="ru_RU.UTF-8"
+environment=LANG="ru_RU.utf8", LC_ALL="ru_RU.UTF-8", LC_LANG="ru_RU.UTF-8",DJANGO_SETTINGS_MODULE="settings.{{ django_settings_file }}"
 redirect_stderr=true
 stdout_logfile={{ project_dir }}/logs/celery-stdout.log
 user={{ user }}
