--- a/static_dist/bower.json
+++ b/static_dist/bower.json
@@ -38,6 +38,8 @@
     "jstree": "~3.2.1",
     "blueimp-gallery": "~2.16.0",
     "font-awesome": "fontawesome#~4.4.0",
-    "Ionicons": "ionicons#~2.0.1"
+    "Ionicons": "ionicons#~2.0.1",
+    "angular-cookies": "1.3.20",
+    "angular-resource": "1.3.20"
   }
 }
