--- a/static_dist/bower.json
+++ b/static_dist/bower.json
@@ -40,6 +40,11 @@
     "font-awesome": "fontawesome#~4.4.0",
     "Ionicons": "ionicons#~2.0.1",
     "angular-cookies": "1.3.20",
-    "angular-resource": "1.3.20"
+    "angular-resource": "1.3.20",
+    "angular-ui-select2": "~0.0.5"
+  },
+  "resolutions": {
+    "select2": "~3.5.4"
   }
+
 }
