--- a/deploy/ansible/roles/labrepo/templates/django_settings.conf
+++ b/deploy/ansible/roles/labrepo/templates/django_settings.conf
@@ -8,6 +8,11 @@ MONGODB_NAME="{{ mongodb_name }}"
 MONGODB_TEST_DATABASE="{{ mongodb_test_database }}"
 MONGODB_HOST="{{ mongodb_host }}"
 MONGODB_PORT="{{ mongodb_port }}"
+POSTGRESQL_USER="{{ postgresql_user }}"
+POSTGRESQL_PASSWORD="{{ postgresql_password }}"
+POSTGRESQL_DBNAME="{{ postgresql_dbname }}"
+POSTGRESQL_HOST="{{ postgresql_host }}"
+POSTGRESQL_PORT="{{ postgresql_port }}"
 EMAIL_HOST="{{ email_host }}"
 EMAIL_PORT={{ email_port }} 
 EMAIL_HOST_USER="{{ email_host_user }}"
