--- a/deploy/ansible/group_vars/production.example
+++ b/deploy/ansible/group_vars/production.example
@@ -14,6 +14,11 @@ mongodb_passwd: <password for admin user>
 mongodb_name: <mongo database name>
 mongodb_host: 127.0.0.1
 mongodb_port: 27017
+postgresql_user: <postgresql user for postgresql_dbname>
+postgresql_password: <postgresql password>
+postgresql_dbname: <postgresql database>
+postgresql_host: 127.0.0.1
+postgresql_port: 5432
 email_host: <SMTP server address>
 email_port: <SMTP server port>
 email_host_user: <SMTP server user>
