--- a/static_dist/bower.json
+++ b/static_dist/bower.json
@@ -41,10 +41,12 @@
     "Ionicons": "ionicons#~2.0.1",
     "angular-cookies": "1.3.20",
     "angular-resource": "1.3.20",
-    "angular-ui-select2": "~0.0.5"
+    "angular-ui-select2": "~0.0.5",
+    "angular-timeago": "~0.2.4",
+    "angular-bootstrap": "~0.14.3",
+    "angular-websocket": "~1.0.14"
   },
   "resolutions": {
     "select2": "~3.5.4"
   }
-
 }
