--- a/static_dist/bower.json
+++ b/static_dist/bower.json
@@ -44,7 +44,8 @@
     "angular-ui-select2": "~0.0.5",
     "angular-timeago": "~0.2.4",
     "angular-bootstrap": "~0.14.3",
-    "angular-websocket": "~1.0.14"
+    "angular-websocket": "~1.0.14",
+    "ng-file-model": "*"
   },
   "resolutions": {
     "select2": "~3.5.4"
