--- a/static_dist/bower.json
+++ b/static_dist/bower.json
@@ -45,9 +45,11 @@
     "angular-timeago": "~0.2.4",
     "angular-bootstrap": "~0.14.3",
     "angular-websocket": "~1.0.14",
-    "ng-file-model": "*"
+    "ng-file-model": "*",
+    "angular-summernote": "~0.7.0"
   },
   "resolutions": {
-    "select2": "~3.5.4"
+    "select2": "~3.5.4",
+    "angular": "1.3.20"
   }
 }
