--- a/deploy/ansible/labrepo.yml
+++ b/deploy/ansible/labrepo.yml
@@ -1,11 +1,10 @@
 ---
-- name: Install Labrepo, nginx, mongo, django
+- name: Install Labrepo, nginx, postgres, django
   hosts: all
 
   roles:
     - common
     - nginx
-    - mongo
     - postgresql
     - elastic
     - redis
