--- a/deploy/ansible/roles/labrepo/tasks/main.yml
+++ b/deploy/ansible/roles/labrepo/tasks/main.yml
@@ -97,7 +97,7 @@
 - name: Run tests
   django_manage: command="test --noinput --failfast" app_path={{ project_dir }} virtualenv={{ project_dir }}/env/
   environment:
-        DJANGO_SETTINGS_MODULE: "settings.server_testing"
+        DJANGO_SETTINGS_MODULE: "settings.testing"
 
 
 - name: Check supervisor service
