--- a/deploy/ansible/roles/labrepo/templates/django_settings.conf
+++ b/deploy/ansible/roles/labrepo/templates/django_settings.conf
@@ -19,3 +19,5 @@ SOCIAL_AUTH_GOOGLE_OAUTH2_KEY="{{ social_auth_google_oauth2_key }}"
 SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET="{{ social_auth_google_oauth2_secret }}"
 SOCIAL_AUTH_LINKEDIN_OAUTH2_KEY="{{ social_auth_linkedin_oauth2_key }}"
 SOCIAL_AUTH_LINKEDIN_OAUTH2_SECRET="{{ social_auth_linkedin_oauth2_secret }}"
+SOCIAL_AUTH_LINKEDIN_OAUTH2_SECRET="{{ social_auth_linkedin_oauth2_secret }}"
+SENTRY_DSN="{{ sentry_dsn }}"
